tests/negative/test_func_null_invoke.orb
fnc main () () {
    eval (sym x:(fnc () ()));
    x;
};